fixed nav item spacing

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -10,7 +10,7 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 1em;
     padding-bottom: 2em;
 }
